# projeto_agenda

./: README.md  Readme.md  Requirements.txt  build.sh  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
accounts/: models.py  urls.py  views.py
accounts/templates/accounts/: cadastro.html  dashboard.html  login.html
agenda/: settings.py  urls.py
contatos/: admin.py  models.py  urls.py  views.py
contatos/migrations/: 0001_initial.py  0002_contato_mostrar.py
contatos/templates/contatos/: index.html  ver_contato.html
management/commands/: createsu.py
templates/: base.html
